# dolla

./: .gitignore  README.md  app.config.ts  bun.lockb  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tauri.config.json  tsconfig.json
.github/workflows/: publish.yml
app/: app.vue
app/components/: ConversationActionGroup.vue  DollaWelcome.vue  DragOverlay.vue  MetaIcon.vue  Placeholder.vue  Settings.vue  SideBar.vue  TitleBar.vue
app/composables/: use-conversation.ts  use-mdit.ts  use-ollama.ts  use-shift-enter.ts  use-sqlite.ts  use-tauri.ts
app/constants/: models.ts
app/pages/: index.vue
app/pages/[id]/: index.vue
app/stores/: conversation.ts  message.ts  ollama.ts
app/utils/: fs-driver.ts  fse.ts  ollama.ts  sqlite.ts  storage.ts  types.ts
scripts/: build.ts  clean.ts  dev.ts  fmt.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/core/: mod.rs  ollama.rs  tray.rs
