[package]
name = "dolla"
version = "0.0.1-alpha.5"
description = "An interface for ollama by tauri"
authors = [ "tmg0" ]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "lib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2.0.0-beta.24", features = [] }
tauri-plugin-fs = "2.0.0-beta.11"

[dependencies.tauri-plugin-sql]
features = [ "sqlite" ]
version = "2.0.0-beta"
